# vagrant-story-api

./: .env.example  .gitignore.local  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0b7ab1be21e2_fix_armor_base_stats_use_field_name_not_.py  2587131ae13e_add_material_category_offsets_and_armor_.py  292babe4c51e_add_hands_column_to_blades.py  2d25d3573fae_fix_weapon_field_names.py  36db0438bbf9_merge_all_feature_migration_heads.py  3fa77c8fddd5_fix_shield_field_names.py  5cfa7076d3f0_rename_weapons_table_to_blades.py  649d98be5148_fix_consumable_names.py  6dd1b9c3be01_add_enemy_drops_table.py  6f76809a3c2f_initial_schema.py  707729c19d8e_update_consumable_descriptions_from_.py  79e6f0157e5c_fix_consumable_descriptions_from_.py  9ac08dc739c2_fix_consumable_data_from_game_guide.py  9be85acfddc4_localize_grip_and_gem_names_to_english.py  a1b2c3d4e5f6_add_spells_table.py  a1b2c3d4e5f7_add_dp_pp_to_inventory_items.py  a2b3c4d5e6f7_add_break_arts_table.py  a7b8c9d0e1f2_add_areas_and_rooms_tables.py  aa9dcf05f69f_localize_accessory_names_to_english.py  acf8b1adae8a_populate_gem_stats_accessory_fixes_.py  af85030565fd_initial_schema.py  b0d0c8bef8bc_add_crafting_and_material_recipes.py  b13f683d0056_add_inventories_and_inventory_items_.py  b1b9e5ae3995_add_bestiary_fields_from_spatvark_guide.py  b1c2d3e4f5a6_add_equip_slot_to_inventory_items.py  b2c3d4e5f6a7_add_keys_table.py  b3c4d5e6f7a8_add_battle_abilities_table.py  b3c7a1d9e2f4_add_user_role_column.py  b73583770546_add_grip_stats_and_categories.py  bdd18c7d04d7_add_gem_stats_and_consumable_.py  c2d3e4f5a6b7_add_storage_to_inventory_items.py  c3d4e5f6a7b8_add_sigils_table.py  c4d5e6f7a8b9_add_characters_table.py  cd8fb71e975b_fix_weapon_blade_type_labels.py  cf2ec699ae97_add_base_character_stats_to_inventories.py  d0c8d71a3452_fix_armor_types_and_names.py  d298371e8ad0_zero_out_armor_gem_slots.py  d4e5f6a7b8c9_add_grimoires_table.py  d5e6f7a8b9c0_add_titles_table.py  d5f249b2dc57_rename_blade_names_from_french_to_.py  (+11 more)
app/: analytics.py  config.py  database.py  features.py  logging.py  main.py  rate_limit.py  telemetry.py
app/auth/: __init__.py  backend.py  dependencies.py  jwks.py  refresh.py  roles.py  security_logging.py  users.py
app/models/: __init__.py  area.py  armor.py  battle_ability.py  blade.py  (+23 more)
data/: armors.json  consumables.json  crafting_recipes.json  encounter_room_mapping.json  enemies.json  enemy_drops.json  enemy_encounters.json  gems.json  grips.json  material_recipes.json  materials.json  weapons.json
scripts/: extract_combinations.py  extract_data.py  fix_weapon_names.py  parse_encounters.py  parse_enemy_drops.py  seed_database.py  seed_encounters.py
tests/: conftest.py  test_api.py  test_loadout_scorer.py  test_notes.py  test_roles.py  test_sentry_rate_limit.py
(+35 files in other folders)
