[project]
name = "vagrant-story-api"
version = "0.3.0"
description = "Public game data API for Vagrant Story"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.41.0",
    "sqlalchemy>=2.0.48",
    "asyncpg>=0.31.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "alembic>=1.18.0",
    "slowapi>=0.1.9",
    "limits>=5.8.0",
    "structlog>=25.0.0",
    "scalar-fastapi>=1.8.1",
    "pyjwt>=2.12.1",
    "cryptography>=46.0.5",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.22.0",
    "ruff>=0.15.0",
    "pre-commit>=4.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (needed for Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
